--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Animal Giphy</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
 
 </head>
 
@@ -22,10 +22,7 @@
   <div id class="row">
   <div id="animals-buttons">
   
-    <button data-animal="dog" class="btn-btn-animal">dog</button>
-    <button data-animal="skunk" class="btn-btn-animal">skunk</button>
-    <button data-animal="giraffe" class="btn-btn-animal">giraffe</button>
-    <button data-animal="octopus" class="btn-btn-animal">octopus</button>
+   
     </div>
     <!-- **************************************** -->
     <div class="row">
@@ -42,7 +39,8 @@
   </form>
  </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-   <script type="text/javascript" src="giphytastic/javascript/giphy.js"></script>
+   <script type="text/javascript" src="./javascript/giphy.js"></script>
+  
  
 
 </body>
